--- a/index.html
+++ b/index.html
@@ -18,14 +18,28 @@
           <li>
             <a href="#">Imágenes</a>
           </li>
-          <li class="menu-icon">
-            
-          </li>
+          <li class="menu-icon"></li>
           <li>
-            <a href="#">Photo</a>
+            <a href="#"><img src="./assets/img/perfil.jpg" alt="" /></a>
           </li>
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="main-logo">
+        <img src="./assets/img/logo-Google.png" alt="" />
+      </section>
+      <section class="main-input">
+        <div class="main-input-container">
+          <span class="search-icon"> </span>
+          <input type="text" />
+          <a class="micro-icon" href="#"></a>
+        </div>
+      </section>
+      <section class="main-buttons">
+        <div><button>Buscar con Google</button></div>
+        <div><button>Me siento con suerte</button></div>
+      </section>
+    </main>
   </body>
 </html>
